# robot-coche

./: .gitignore  README.md
lan-car-control/: index.html  package-lock.json  package.json  vite.config.js
lan-car-control/src/: App.jsx  index.css
lan-car-control/src/components/: InfraredSensor.css  InfraredSensor.jsx  Radar.css  Radar.jsx
lan-car-control/src/page/: ChatPage.jsx  ControlPage.css  ControlPage.jsx
scripts/: launch_robot.sh  start_all.sh
src/: Descripcion_funciones_archivos_src_ES.md  src目录文件功能说明.md
src/freenove_4wd_hw/: package.xml  setup.cfg  setup.py
src/freenove_4wd_hw/freenove_4wd_hw/: __init__.py
src/freenove_4wd_hw/resource/: freenove_4wd_hw
src/freenove_4wd_nodes/: package.xml  setup.cfg  setup.py
src/freenove_4wd_nodes/freenove_4wd_nodes/: camera_driver.py  camera_node.py  car_base_node.py  libcamera_camera_node.py
src/freenove_4wd_nodes/launch/: bringup.launch.py
src/freenove_4wd_nodes/resource/: freenove_4wd_nodes
src/tracking/: .gitignore  EXAMPLES.md  INSTALL.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  package.xml  params.yaml  setup.cfg  setup.py
src/tracking/launch/: object_tracking.launch.py
src/tracking/resource/: tracking
src/tracking/test_local/: test_tracker.py
src/tracking/tracking/: __init__.py  object_tracker_node.py  pid_controller_node.py  tracking_utils.py
src/vision_nodes/: README.md  package.xml  setup.cfg  setup.py
src/vision_nodes/launch/: ball_detection.launch.py
src/vision_nodes/test_local/: local_webcam_publisher.py
src/vision_nodes/vision_nodes/: ball_detector_node.py  ball_follower_node.py  vision_utils.py
