<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freenove_4wd_hw</name>
  <version>0.0.0</version>
  <description>Hardware control modules for Freenove 4WD Smart Car (copied from upstream Python server code).</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>CC-BY-NC-SA-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

