<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freenove_4wd_nodes</name>
  <version>0.0.0</version>
  <description>ROS2 (rclpy) nodes for Freenove 4WD Smart Car.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>CC-BY-NC-SA-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>freenove_4wd_hw</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

