<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_nodes</name>
  <version>0.0.1</version>
  <description>Vision processing nodes for object detection and tracking on Freenove 4WD robot</description>
  <maintainer email="robot@localhost">robot-coche</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Freenove/Freenove_4WD_Smart_Car_Kit_for_Raspberry_Pi</url>
  <url type="repository">https://github.com/Wang-kaka-rt/robot-coche</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
